ADDED a How It works static page.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,47 +71,48 @@
     <br />
 
     <nav class="navbar navbar-default navbar-fixed-bottom">
-        <div class="container">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="myNavbar">
-                <div class="row1">
-                    <ul class="nav navbar-nav">
-                      <li class="dropup">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="ts-label">About Us <i class="fa fa-sort"></i></span></a>
-                        <ul class="dropdown-menu dropup dropup-menu" role="menu" aria-labelledby="dLabel">
-                          <li><%= link_to 'Career With Us', career_path %></a></li>
-                          <li><%= link_to 'Connechub', about_path %></li>
-                          <li><%= link_to 'Contact Us', contact_path %></li>
-                          <li><%= link_to 'Prices', '/prices/index' %></li>
-                        </ul>
-                      </li>
-                      <li class="dropup">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="ts-label">Legal <i class="fa fa-sort"></i></span></a>
-                        <ul class="dropdown-menu dropup dropup-menu" role="menu" aria-labelledby="dLabel">
-                          <li><%= link_to 'Terms of Conditions', terms_path %></li>
-                          <li><%= link_to 'Privacy Policy', privacy_path %></li>
-                          <li><%= link_to 'Posting Terms of Use', postterm_path %></li>
-                        </ul>
-                      </li>
-                      <li class="dropup">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="ts-label">Help <i class="fa fa-sort"></i></span></a>
-                        <ul class="dropdown-menu dropup dropup-menu" role="menu" aria-labelledby="dLabel">
-                          <li><%= link_to 'FAQs', faq_path %></li>
-                          <li><%= link_to 'Safety Tips', safetytips_path %></li>
-                        </ul>
-                      </li>
-                      <li class="li_no_bg">
-                        <span class="ts-copy">© Connechub 2019</span>
-                      </li>
-                    </ul>
-                </div>
+      <div class="container">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <div class="row1">
+              <ul class="nav navbar-nav">
+                <li class="dropup">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="ts-label">About Us <i class="fa fa-sort"></i></span></a>
+                  <ul class="dropdown-menu dropup dropup-menu" role="menu" aria-labelledby="dLabel">
+                    <li><%= link_to 'Career With Us', career_path %></a></li>
+                    <li><%= link_to 'Connechub', about_path %></li>
+                    <li><%= link_to 'Contact Us', contact_path %></li>
+                    <li><%= link_to 'Prices', '/prices/index' %></li>
+                  </ul>
+                </li>
+                <li class="dropup">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="ts-label">Legal <i class="fa fa-sort"></i></span></a>
+                  <ul class="dropdown-menu dropup dropup-menu" role="menu" aria-labelledby="dLabel">
+                    <li><%= link_to 'Terms of Conditions', terms_path %></li>
+                    <li><%= link_to 'Privacy Policy', privacy_path %></li>
+                    <li><%= link_to 'Posting Terms of Use', postterm_path %></li>
+                  </ul>
+                </li>
+                <li class="dropup">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="ts-label">Help <i class="fa fa-sort"></i></span></a>
+                  <ul class="dropdown-menu dropup dropup-menu" role="menu" aria-labelledby="dLabel">
+                    <li><%= link_to 'How It Works', howitworks_path %></a></li>
+                    <li><%= link_to 'FAQs', faq_path %></li>
+                    <li><%= link_to 'Safety Tips', safetytips_path %></li>
+                  </ul>
+                </li>
+                <li class="li_no_bg">
+                  <span class="ts-copy">© Connechub 2019</span>
+                </li>
+              </ul>
             </div>
           </div>
+        </div>
       </nav>
       <%# = console %>
     </body>
