ADDED init indicator to User profile.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,7 @@
           <hr style= "width: 100px">
           <div class="small-heading" style="color: #ffffff"><%= @user.username %></div>
           <div class="hero-description" style="color: #ffffff" ><%= @user.bio %></div>
+          <div>Promo 1: <%= @user.promot_1 %></div>
           <br>
           <div><%= link_to 'Edit Your Profile', edit_user_registration_path, class: "btn btn-success btn-sm" %></div>
           <br>
