--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,14 +12,14 @@
  *
  *= require 'masonry/transitions'
  *= require 'masonry/basic'
-*= require 'masonry/centered'
-*= require 'masonry/fluid'
-*= require 'masonry/gutters'
-*= require 'masonry/infinitescroll'
-*= require 'masonry/right-to-left'
-*= require video-js
-
+ *= require 'masonry/centered'
+ *= require 'masonry/fluid'
+ *= require 'masonry/gutters'
+ *= require 'masonry/infinitescroll'
+ *= require 'masonry/right-to-left'
+ *= require video-js
  */
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome-sprockets";
@@ -27,9 +27,10 @@
 @import "jbar.colors";
 @import "jbar";
 
-
 body{height:100%;}
 
+/* sub/cateogry image thumbnail size */
+div.panel-body > a > img { width: 100% }
 
 .show-box {font-size: 12px; width: 500px; max-width: 100%;}
 .pin-item {margin: 10px; width: 150px; box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22); border-radius: 7px;
