UPDATED wording from Make an Offer to Message the Seller

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -73,7 +73,7 @@
         </div>
         <hr>
 
-        <div class="pull-right"><%= mail_to(@listing.user.email, "Make an Offer", class: 'btn btn-success btn-sm', subject: @listing.title, body: 'Reach out to make an offer about their ad.') %> </div>
+        <div class="pull-right"><%= mail_to(@listing.user.email, "Message the Seller", class: 'btn btn-success btn-sm', subject: @listing.title, body: 'Reach out to message the seller about their ad.') %> </div>
         <br>
 
         <div>
