--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,7 +43,7 @@
                             <% if listing.user == current_user %>
                             <span class="description"><%= link_to 'Edit Listing', edit_listing_path(listing) %></span> |
                             <span class="description"><%= link_to 'Delete', listing, method: :delete, data: { confirm: 'Are you sure?' } %></span>
-                            <span class="description"><%= link_to 'Change Video', "listings/upload/#{listing.id}" %></span> |
+                            <span class="description"><%= link_to 'Change Video', "/listings/upload/#{listing.id}" %></span>
                             <% end %>
                           </div>
                       </div>
