--- a/app/views/prices/index.erb
+++ b/app/views/prices/index.erb
@@ -12,19 +12,18 @@
     <div class="container">
 
     <style>
-        div.price {
+        .price {
             font-family: Verdana, Geneva, sans-serif;
             font-size: 48px;
             color: black;
             text-align: center;
         }
 
-        div.price1 {
-            font-family: Verdana, Geneva, sans-serif;
+        .price1 {
             font-size: 16px;
-            color: black;
-            text-align: center;
             padding-top: 10px;
+            margin: auto;
+            width: 75%;
         }
 
         table.center {
@@ -188,15 +187,10 @@
     </style>
     
     <br>
-    <table>
-        <table>
-            <tr><b>
-                    <div class="price">Pricing Guide </div>
-                </b>
-                <div class="price1">Connechub is free to signup and free to use as long as you want</div>
-            </tr>
-        </table>
-    </table>
+    <div class="price">
+        <b>Pricing Guide</b>
+        <div class="price1">Connechub is free to signup and free to use as long as you want.</div>
+    </div>
     <br>
     <br>
 
@@ -458,7 +452,10 @@
     <footer style="background-color:DodgerBlue;">
         <table>
             <table>
-                <tr><span class="bottompage">Connechub is free to signup and free to use as long as you want</span><span><button class="button" style="background-color:MediumSeaGreen;">Get Started</button></span></tr>
+                <tr>
+                    <span class="price1">Connechub is free to signup and free to use as long as you want.</span>
+                    <span><button class="button" style="background-color:MediumSeaGreen;">Get Started</button></span>
+                </tr>
             </table>
         </table>
     </footer>
