Number of listings for Sale (cat id 9) now working on landing page.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1179,3 +1179,8 @@ body > div > div > div > div > ul {
   background-color: #d9edf7;
   border-color: #bce8f1;
 }
+
+/* space items on the landing page */
+li.landing_page {
+  padding: 5px 0px;
+}
