--- a/app/views/prices/index.erb
+++ b/app/views/prices/index.erb
@@ -1,5 +1,5 @@
 <div class = "container">
-    <header class="business-header">
+    <header>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
