REMOVED font-family CSS from price index VW.

--- a/app/views/prices/index.erb
+++ b/app/views/prices/index.erb
@@ -13,7 +13,6 @@
 
     <style>
         .price {
-            font-family: Verdana, Geneva, sans-serif;
             font-size: 48px;
             color: black;
             text-align: center;
@@ -31,38 +30,32 @@
             margin-right: auto;
         }
 
-
         table.a {
             border-radius: 25px;
-            font-family: Verdana, Geneva, sans-serif;
             width: 180px;
             Height: 250px;
         }
 
         table.b {
             border-radius: 25px;
-            font-family: Verdana, Geneva, sans-serif;
             width: 180px;
             Height: 250px;
         }
 
         table.c {
             border-radius: 25px;
-            font-family: arial, sans-serif;
             width: 180px;
             Height: 250px;
         }
 
         table.d {
             border-radius: 25px;
-            font-family: arial, sans-serif;
             width: 180px;
             Height: 250px;
         }
 
         table.e {
             border-radius: 25px;
-            font-family: arial, sans-serif;
             width: 180px;
             Height: 250px;
         }
@@ -105,52 +98,40 @@
         }
 
         table.font1 {
-            font-family: Verdana, Geneva, sans-serif;
             width: 180px;
-
-
         }
 
         div.font1 {
-            font-family: Verdana, Geneva, sans-serif;
             font-size: 16px;
             color: Tomato;
-
         }
 
         div.font2 {
-            font-family: Verdana, Geneva, sans-serif;
             font-size: 16px;
             color: Orange;
         }
 
-
         div.font3 {
-            font-family: Verdana, Geneva, sans-serif;
             font-size: 16px;
             color: DodgerBlue;
         }
 
         div.font4 {
-            font-family: Verdana, Geneva, sans-serif;
             font-size: 16px;
             color: SlateBlue;
         }
 
         div.font5 {
-            font-family: Verdana, Geneva, sans-serif;
             font-size: 16px;
             color: MediumSeaGreen;
         }
 
         p {
-            font-family: Verdana, Geneva, sans-serif;
             font-size: 16px;
             color: black;
         }
 
         ul.demo {
-            font-family: Verdana, Geneva, sans-serif;
             font-size: 16px;
             color: gray;
             list-style-type: none;
@@ -172,12 +153,10 @@
         }
 
         .bottompage {
-            font-family: Verdana, Geneva, sans-serif;
             font-size: 16px;
             color: white;
             margin-left: 40px;
             margin-right: 40px;
-
         }
 
         footer {
@@ -185,7 +164,7 @@
             padding-top: 25px;
         }
     </style>
-    
+
     <br>
     <div class="price">
         <b>Pricing Guide</b>
@@ -209,8 +188,8 @@
                         <div class="font1">Free Categories</div>
                     </b>
                     <hr color="Tomato">
-                    <p>These categories do not carry a charge and is free to post in any of their Subcategories: <ul
-                            class="demo">
+                    <p>These categories do not carry a charge and is free to post in any of their Subcategories:
+                        <ul class="demo">
                             <li>Community</li>
                             <li>Campus</li>
                             <li>Hard to Find</li>
@@ -319,7 +298,8 @@
                         <div class="font3">Sales Category</div>
                     </b>
                     <hr color="DodgerBlue">
-                    <p>There are only two subcategories that carry a $10.00 fee per listing: <ul class="demo">
+                    <p>There are only two subcategories that carry a $10.00 fee per listing:
+                        <ul class="demo">
                             <li>Automotive</li>
                             <li>Tickets</li>
                         </ul>
