Unbolded text per request.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -20,7 +20,7 @@
                 <h2>About Us</h2>
                 <p>As a classified advertisement platform Connechub is "Connecting you with jobs, goods, and services in your community."</p>
                 <p>With Connechub you can post a video ad from any source such as; your cellphone (Android, IOS), DLSR camera, Mirrorless Camera, Video camera and any other video source.</p>
-                <p>As the old clich goes, <b>"A picture is worth a thousand words"</b>.</p>
+                <p>As the old clich goes, "A picture is worth a thousand words".</p>
                 <p>However, "a video is worth a million more".</p>
                 <br>
 
