--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -6,7 +6,7 @@ mark {
     color: white;
 }
 </style>
-<div class="container" style= "margin-right: inherit; margin-left: inherit; padding: 0 150px 0 150px;">
+<div class="container">
 <h2 class="text-muted">FAQ's</h2>
 <hr>
 <h4 style="color:#0073e6;"><b>Welcome to Connechub</b></h4>
