--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -56,7 +56,7 @@
             <% @sale.subcategories.each_with_index do |subcategory, index| %>
             <li class="landing_page">
               <%= link_to subcategory.name, category_subcategory_path(@sale, subcategory) %>
-              <%= if @sale_subcat_posting_count[subcategory.id] == '0' ? 'QWER' : 'ASDF' %>
+              <%= @sale_subcat_posting_count[subcategory.id] == '0' ? 'QWER' : 'ASDF' %>
             </li>
             <% end %>
           </ul>
