REPLACED www. string with <%= ENV['APP_ENV'].downcase %>. in dynamic pages.

--- a/app/views/prices/index.erb
+++ b/app/views/prices/index.erb
@@ -434,7 +434,12 @@
             <table>
                 <tr>
                     <span class="price1">Connechub is free to signup and free to use as long as you want.</span>
-                    <span><button class="button" style="background-color:MediumSeaGreen;">Get Started</button></span>
+                    <span>
+                        <a
+                            href="https://<%= ENV['APP_ENV'].downcase %>.connechub.com/users/sign_up"
+                            class="button" style="background-color:MediumSeaGreen;"
+                        >Get Started</a>
+                    </span>
                 </tr>
             </table>
         </table>
