--- a/app/views/howitworks/index.erb
+++ b/app/views/howitworks/index.erb
@@ -38,7 +38,7 @@
 
           <% if !@user.username %>
             <p class="lead">First, you need to create your own account
-              <a href="https://www.connechub.com/users/sign_up">
+              <a href="https://<%= ENV['APP_ENV'].downcase %>.connechub.com/users/sign_up">
                 <span style='font-size:16.0pt;line-height:106%'>here</span>
               </a>, which will allow you to post video ads.
             </p>
