FIXED class var referances for new _more_categories partial.

--- a/app/views/categories/_show.erb
+++ b/app/views/categories/_show.erb
@@ -44,7 +44,7 @@
   </div>
   <br>
 
-    <%= render :partial => 'categories/more_categories', locals: {all_categories: all_categories}  %>
+    <%= render :partial => 'categories/more_categories', locals: {all_categories: @all_categories}  %>
 
     <br>
   </div>
