--- a/app/views/categories/_more_categories.erb
+++ b/app/views/categories/_more_categories.erb
@@ -1,7 +1,7 @@
 <div class= 'categories1'>
   <div align="center" style= "padding:10px 0px 0px 1px;" class = "small-heading"> More categories </div>
   <ul class='categories'>
-    <% @all_categories.each do |category| %>
+    <% all_categories.each do |category| %>
       <li><%= link_to(category.name, category_path(category)) %></li>
     <% end %>
   </ul>
