--- a/app/views/categories/_show.erb
+++ b/app/views/categories/_show.erb
@@ -44,8 +44,8 @@
   </div>
   <br>
 
-    <%= render :partial => 'categories/more_categories', locals: {all_categories: all_categories}  %>
+  <%= render :partial => 'categories/more_categories', locals: {all_categories: @all_categories}  %>
 
-    <br>
-  </div>
+  <br>
+</div>
 
